Fix text extraction and add response generation functionality

--- a/test.ipynb
+++ b/test.ipynb
@@ -58,6 +58,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please answer the question according the context: \n",
+      "Question: What is Industrial Revolution?\n",
+      "Context: 123\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What is Industrial Revolution?\"\n",
+    "text = \"123\"\n",
+    "prompt = \"Please answer the question according the context: \\nQuestion: \" + question + \"\\nContext: \" + text\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
